# django-davinci-crawling

./: AUTHORS.rst  CHANGELOG.rst  Dockerfile  README.md  TODO.md  TODO.rst  manage.py  pre-commit.sh  requirements.txt  requirements_tests.txt  setup.cfg  setup.py
davinci_crawling/: __init__.py  apps.py  crawler.py  crawling_throttle.py  exceptions.py  io.py  models.py  net.py  settings.py  time.py  urls.py  utils.py  views.py  wsgi.py
davinci_crawling/example/bovespa/: LICENSE  README.md  __init__.py  crawlers.py  document.py  exceptions.py  io.py  models.py  search_indexes.py  urls.py
davinci_crawling/example/bovespa/api/: __init__.py  serializers.py  views.py
davinci_crawling/example/bovespa/crawling_parts/: crawl_companies_files.py  crawl_listed_companies.py  download_file.py  process_file.py
davinci_crawling/example/bovespa/data/: companies.csv
davinci_crawling/example/bovespa/management/: __init__.py
davinci_crawling/example/bovespa/management/commands/: gen_accountability_plan.py  gen_finstat.py
davinci_crawling/example/bovespa/notebooks/: Alpha Factor_2_CapEx_Vol_6Q.ipynb  Finantial Statements.ipynb
davinci_crawling/gcp/: __init__.py  docker-crawl-entrypoint.sh  instances.py  startup-script.sh
davinci_crawling/gcp/data/: crawler_instance.json
davinci_crawling/management/: __init__.py
davinci_crawling/management/commands/: crawl.py
davinci_crawling/scheduler/: __init__.py  apps.py  scheduler.py  scheduler_jobs.py
docs/: Makefile  conf.py  index.rst  notebooks.md
docs/api/: davinci_crawling.entity_diff.rst  davinci_crawling.entity_diff.tests.rst  davinci_crawling.example.bovespa.api.rst  davinci_crawling.example.bovespa.crawling_parts.rst  davinci_crawling.example.bovespa.management.commands.rst  davinci_crawling.example.bovespa.management.rst  davinci_crawling.example.bovespa.notebooks.rst  davinci_crawling.example.bovespa.rst  davinci_crawling.example.rst  davinci_crawling.gcp.rst  davinci_crawling.management.commands.rst  davinci_crawling.management.commands.tests.rst  davinci_crawling.management.commands.utils.rst  davinci_crawling.management.rst  davinci_crawling.producer_consumer.rst  davinci_crawling.producer_consumer.tests.rst  davinci_crawling.proxy.rst  davinci_crawling.proxy.tests.rst  davinci_crawling.rst  davinci_crawling.scheduler.rst  davinci_crawling.task.api.rst  davinci_crawling.task.rst  davinci_crawling.task.tests.rst  davinci_crawling.tests.rst  davinci_crawling.throttle.rst  davinci_crawling.throttle.tests.rst  modules.rst
docs/davinci/: authentication.rst  index.rst  jsondiff.rst  kafka_monitoring.rst  proxymesh.rst
environment/dev-local/: Dockerfile
requirements/: base.in  dev.in  full.in
src/bgds_task/: README.rst  TODO.rst  __init__.py  apps.py  crawlers.py  models.py  search_indexes.py  urls.py  utils.py
src/bgds_task/api/: serializers.py  urls.py  views.py
src/bgds_task/tests/: data.json  test_models.py  tests.py
src/davinci_crawling/: __init__.py  apps.py  crawler.py  crawling_throttle.py  io.py  models.py  net.py  settings.py  time.py  urls.py  utils.py  views.py  wsgi.py
src/davinci_crawling/entity_diff/: __init__.py  diff.py
src/davinci_crawling/entity_diff/tests/: data.json  test_diff.py  test_diff_real_data.py
src/davinci_crawling/example/bovespa/: README.md  README.rst  __init__.py  apps.py  crawlers.py  document.py  exceptions.py  io.py  models.py  search_indexes.py  urls.py
src/davinci_crawling/example/bovespa/api/: serializers.py  views.py
src/davinci_crawling/gcp/: instances.py  startup-script_test.sh
src/davinci_crawling/gcp/data/: crawler_instance.json
src/davinci_crawling/management/: producer.py
src/davinci_crawling/management/commands/: consumer.py  crawl.py  crawl_params.py  multiprocessing_producer.py  queue_producer.py  tasks.py  tasks_pool.py
src/davinci_crawling/producer_consumer/: __init__.py  crawl_consumer.py  crawl_params_queue_producer.py  non_daemon_pool.py
src/davinci_crawling/producer_consumer/tests/: __init__.py  test_commands.py
src/davinci_crawling/proxy/: __init__.py  proxy.py  proxy_mesh.py  proxy_quality_checker.py
src/davinci_crawling/proxy/tests/: test_proxy.py  test_proxy_mesh.py
src/davinci_crawling/scheduler/: __init__.py  apps.py  scheduler.py  scheduler_jobs.py
src/davinci_crawling/task/: CHANGELOG.rst  __init__.py  apps.py  models.py  search_indexes.py  urls.py  utils.py
src/davinci_crawling/task/api/: __init__.py  serializers.py  urls.py  views.py
src/davinci_crawling/task/tests/: test_models.py  tests.py
src/davinci_crawling/tests/: test_crawler.py  test_time_it.py
src/davinci_crawling/throttle/: memory_throttle.py  redis_throttle.py  throttle.py  throttle_implementation.py
src/davinci_crawling/throttle/tests/: test_redis_throttle.py  test_throttle.py
src/task/: __init__.py  apps.py  models.py  search_indexes.py  urls.py  utils.py
src/task/api/: serializers.py  urls.py
src/task/tests/: __init__.py  data.json  test_models.py  tests.py
(+20 files in other folders)
